# ray_tracer_app

./: .gitignore  README.md  ballistics_ec2_deployment_steps.txt  ballistics_ec2_local_postgres_checklist.txt  prod_checklist.rtf
ballistics_backend/: compose.yaml
ballistics_backend/backend/: Dockerfile  log  log1  pom.xml
ballistics_backend/backend/src/main/c/: animate_sphere_on_plane
ballistics_backend/backend/src/main/resources/: application-dev.properties  application-prod.properties  application.properties  schema.sql
ballistics_frontend/: README.md  angular.json  package-lock.json  package.json
ballistics_frontend/.angular/cache/21.2.1/ballistics_frontend/: .tsbuildinfo  angular-compiler.db  (+1 more)
ballistics_frontend/src/: index.html  styles.css
ballistics_frontend/src/app/: app.html  app.spec.ts  app.ts  auth-service.ts  render-service.spec.ts  render-service.ts
ballistics_frontend/src/app/input-form-component/: input-form-component.html  input-form-component.spec.ts  input-form-component.ts  input-params.ts
ballistics_frontend/src/app/list-renders-component/: list-renders-component.html  list-renders-component.spec.ts  list-renders-component.ts
ballistics_frontend/src/app/oauth-component/: oauth-component.html  oauth-component.spec.ts  oauth-component.ts  user.ts
ballistics_frontend/src/app/render-component/: render-component.css  render-component.html  render-component.ts
ballistics_frontend/src/app/video_component/: video-component.html  video-component.ts
ballistics_frontend/src/environments/: environment.ts
ray_tracer/: CMakeLists.txt  README.md
ray_tracer/apps/: animate_sphere_on_plane.cpp  physics_test.cpp  scratch.cpp  sphere_on_plane.cpp
ray_tracer/build_release/: CMakeCache.txt  Makefile  physics_test  sphere_on_plane
ray_tracer/include/ray_tracer/animation/: animation.h
ray_tracer/include/ray_tracer/camera/: camera.h
ray_tracer/include/ray_tracer/geometry/: plane.h
ray_tracer/include/ray_tracer/helpers/: computation.h
ray_tracer/include/ray_tracer/img/: canvas.h  color.h
ray_tracer/include/ray_tracer/lighting/: light.h
ray_tracer/include/ray_tracer/math/: matrix.h  tuple.h  util.h
ray_tracer/include/ray_tracer/physics/: collision.h  physics.h
ray_tracer/include/ray_tracer/world/: world.h
ray_tracer/src/animation/: animation.cpp
ray_tracer/src/geometry/: intersection.cpp
ray_tracer/src/lighting/: material.cpp  pattern.cpp
ray_tracer/src/math/: tuple.cpp
ray_tracer/src/physics/: collision.cpp  physics.cpp
ray_tracer_challenge/apps/: misc.cpp
ray_tracer_challenge/build_debug/: CMakeCache.txt  Makefile
ray_tracer_challenge/build_release/: CMakeCache.txt  misc  scratch
ray_tracer_challenge/docs/: index.html  script.js  sphere_on_plane.js  sphere_on_plane.wasm
ray_tracer_challenge/include/ray_tracer/camera/: camera.h
ray_tracer_challenge/include/ray_tracer/demo/: cannon.h
ray_tracer_challenge/include/ray_tracer/geometry/: intersection.h  shape.h  sphere.h
ray_tracer_challenge/include/ray_tracer/lighting/: material.h  pattern.h
ray_tracer_challenge/include/ray_tracer/math/: ray.h  transform.h
ray_tracer_challenge/include/ray_tracer/physics/: physics.h
ray_tracer_challenge/src/animation/: animation.cpp
ray_tracer_challenge/src/camera/: camera.cpp
ray_tracer_challenge/src/geometry/: plane.cpp  sphere.cpp
ray_tracer_challenge/src/helpers/: computation.cpp
ray_tracer_challenge/src/img/: canvas.cpp
ray_tracer_challenge/src/lighting/: light.cpp
ray_tracer_challenge/src/math/: matrix.cpp  ray.cpp  transform.cpp  util.cpp
ray_tracer_challenge/src/world/: world.cpp
ray_tracer_challenge/tests/: canvas_tests.cpp  color_tests.cpp  geo_tests.cpp  light_tests.cpp  matrix_tests.cpp  misc_tests.cpp  ray_tests.cpp  test_helpers.h  transform_tests.cpp
(+27 files in other folders)
